--- a/src/Clients/Visuals/styles/visuals.less
+++ b/src/Clients/Visuals/styles/visuals.less
@@ -37,37 +37,9 @@
 @import (optional) "sunburstChart.less";
 
 .slicerContainer {
-    label.slicerCheckbox {
-        input {
-            display: none;
-        }
-
-        span::before {
-            content: '';
-            display: inline-block;
-            cursor: pointer;
-            .sprite(@slicer-checkbox);
-            opacity: 0.5;
-            margin-right: 5px;
-            vertical-align: middle;
-        }
-
-        &:hover span::before {
-            opacity: 1;
-        }
-
-        input:checked + span::before {
-            .sprite(@slicer-checkbox-selected);
-            opacity: 1;
-        }
-
-        input.partiallySelected + span::before {
-            .sprite(@slicer-partially-selected);
-            opacity: 1;
-        }
-    }
 
     .slicerHeader {
+        margin: 0 0 0 8px;
         box-sizing: border-box;
     }
 
@@ -83,18 +55,53 @@
     }
 
     .slicerItemContainer {
-        // This is referred in slicer.ts to calculate total item height. Any changes to these values should also be updated in the ts file
-        margin-top: 5px;
+        margin: 2px 0 0 8px;
         box-sizing: border-box;
+        white-space: nowrap;
+
+        * {
+            display: table-cell;
+	        vertical-align: bottom;
+        }
+
+        &:hover .slicerCheckbox span::before {
+            opacity: 1;
+        }
+    }
+
+    .slicerCheckbox {
+        cursor: pointer;
+
+        input {
+            display: none;
+        }
+
+        span {
+            display: table-cell;
+        }
+
+        span::before {
+            content: '';
+            display: inline-block;
+            vertical-align: middle;
+            .sprite(@slicer-checkbox);
+            opacity: 0.5;
+        }
+
+        input:checked + span::before {
+            .sprite(@slicer-checkbox-selected);
+            opacity: 1;
+        }
+
+        input.partiallySelected + span::before {
+            .sprite(@slicer-partially-selected);
+            opacity: 1;
+        }
     }
 
     .slicerText {
-        font-size: 14px;
-        text-overflow: ellipsis;
-        display: inline-block;
-        overflow: hidden;
-        white-space: nowrap;
         cursor: pointer;
+        font-size: 14px;
     }
 
     .clear {
@@ -619,10 +626,6 @@
     .bi-tablix {
         position: relative;
         text-align: left;
-        -webkit-font-feature-settings: "tnum";
-        -moz-font-feature-settings: "tnum";
-        -ms-font-feature-settings: "tnum";
-        font-feature-settings: "tnum";
 
         .unselectable {
             -webkit-user-select: none;
@@ -781,10 +784,6 @@
     .bi-dashboard-tablix {
         position: relative;
         text-align: left;
-        -webkit-font-feature-settings: "tnum";
-        -moz-font-feature-settings: "tnum";
-        -ms-font-feature-settings: "tnum";
-        font-feature-settings: "tnum";
 
         .unselectable {
             -webkit-user-select: none;
@@ -1412,6 +1411,7 @@
 
 .richtextbox {
     color: @neutralPrimaryColor;
+    pointer-events: all;
 
     a {
         color: @defaultLinkColor;
@@ -1424,6 +1424,7 @@
 
     .ql-editor {
         line-height: normal;
+        word-wrap: break-word;
     }
 }
 
