--- a/src/Clients/Visuals/styles/visuals.less
+++ b/src/Clients/Visuals/styles/visuals.less
@@ -1791,3 +1791,30 @@ div.ql-toolbar {
         }
     }
 }
+
+.histogram {
+    @histogramAxesColor: #777;
+    @histogramLegendTextColor: #000;
+
+    .axis, .legends {
+        path, line {
+            fill: none;
+            stroke: @histogramAxesColor;
+            shape-rendering: crispEdges;
+        }
+
+        text {
+            fill: @histogramAxesColor;
+            font-size: 11px;
+            font-family: sans-serif;
+        }
+    }
+
+    .legends {
+        text {
+            font-size: 12px;
+            fill: @histogramLegendTextColor;
+            text-anchor: middle;
+        }
+    }
+}
