fixes values formatting, colors and capabilities; adds "Enumerate Objects"

--- a/src/Clients/Visuals/styles/visuals.less
+++ b/src/Clients/Visuals/styles/visuals.less
@@ -1816,10 +1816,10 @@ div.ql-toolbar {
 }
 
 .histogram {
-    @histogramAxesColor: #777;
-    @histogramLegendTextColor: #000;
+    @histogramAxesColor: @neutralSecondaryAltColor;
+    @histogramLegendTextColor: @blackColor;
 
-    font-family: sans-serif;
+    font-family: @regularFontFamily;
 
     .axis, .legends {
         path, line {
