move css to visuals.less

--- a/src/Clients/Visuals/styles/visuals.less
+++ b/src/Clients/Visuals/styles/visuals.less
@@ -1829,3 +1829,9 @@ div.ql-toolbar {
         }
     }
 }
+.sunBurstPercentage{
+    font-weight:bold;
+}
+.sunBurstPercentageFixed{
+    font-weight:bold;
+}
