move all other styles to css

--- a/src/Clients/Visuals/styles/visuals.less
+++ b/src/Clients/Visuals/styles/visuals.less
@@ -1831,7 +1831,9 @@ div.ql-toolbar {
 }
 .sunBurstPercentage{
     font-weight:bold;
+    opacity:0;
 }
 .sunBurstPercentageFixed{
     font-weight:bold;
+    opacity:0;
 }
