fixed issues of Tornado Chart

--- a/src/Clients/Visuals/styles/visuals.less
+++ b/src/Clients/Visuals/styles/visuals.less
@@ -1866,7 +1866,7 @@ div.ql-toolbar {
     font-family: @regularFontFamily;
     font-size: 11px;
 
-    .labels, .categories, .legend {
+    .labels, .categories {
         text {
             fill: @tornadoChartLabelColor;
         }
