Add a new Word Cloud visual

--- a/src/Clients/Visuals/styles/visuals.less
+++ b/src/Clients/Visuals/styles/visuals.less
@@ -1929,3 +1929,11 @@ div.ql-toolbar {
         }
     }
 }
+
+.wordCloud {
+    font-family: @regularFontFamily;
+
+    .words text {
+        text-anchor: middle;
+    }
+}
