--- a/src/Clients/Visuals/styles/visuals.less
+++ b/src/Clients/Visuals/styles/visuals.less
@@ -1860,17 +1860,10 @@ div.ql-toolbar {
 }
 
 .tornado-chart {
-    @tornadoChartLabelColor: @neutralSecondaryAltColor;
-    @tornadoChartAxisColor: @tornadoChartLabelColor;
+    @tornadoChartAxisColor: @neutralSecondaryAltColor;
 
     font-family: @regularFontFamily;
     font-size: 11px;
-
-    .labels, .categories {
-        text {
-            fill: @tornadoChartLabelColor;
-        }
-    }
 
     .axes {
         .axis {
