fixed bug 1446 "x-axis does not work for categorical. The user should pick a datetime field, but we should support categorical anyway. Currently we render the index for non-date x-axis fields."

--- a/src/Clients/Visuals/styles/visuals.less
+++ b/src/Clients/Visuals/styles/visuals.less
@@ -1554,12 +1554,12 @@ div.ql-toolbar {
         100% { transform: rotate(2deg); }
     }
 }
-    
+
 .streamGraph {
     .axis{
         path, line {
             fill: none;
-            stroke: black;
+            stroke: #666;
             shape-rendering: crispEdges;
         }
 
