--- a/src/Clients/Visuals/styles/visuals.less
+++ b/src/Clients/Visuals/styles/visuals.less
@@ -1786,6 +1786,22 @@ div.ql-toolbar {
         }
     }
 }
+
+.timeline {
+    .axis{
+        path, line {
+            fill: none;
+            stroke: black;
+            shape-rendering: crispEdges;
+        }
+
+        text {
+            font-family: sans-serif;
+            font-size: 11px;
+        }
+    }
+}
+
 .sunBurstPercentage{
     font-weight:bold;
     opacity:0;
