--- a/src/Clients/Visuals/styles/visuals.less
+++ b/src/Clients/Visuals/styles/visuals.less
@@ -86,8 +86,8 @@
         }
 
         img {
-            max-width:100px;
-            width:100%;
+            max-width: 100px;
+            width: 100%;
         }
 
         &:hover {
@@ -1219,7 +1219,6 @@
             font-size: 48px;
         }
     }
-
     /* Adding custom styles to the listView jQuery Scrollbar. */
     .scroll-wrapper {
         width: 100%;
@@ -1253,7 +1252,6 @@
             }
         }
     }
-
     /* Only show the scrollbars on hover or when being dragged. */
     .scroll-wrapper:hover .scroll-element .scroll-bar,
     .scroll-wrapper .scroll-element.scroll-draggable .scroll-bar {
@@ -1372,12 +1370,13 @@
 }
 
 .labelGraphicsContext {
-    .label{
+    .label {
         font-size: 12px;
         text-anchor: middle;
         font-family: @regularSecondaryFontFamily;
     } 
-   .catagorylabel{
+
+    .catagorylabel {
         font-size: 12px;
         text-anchor: middle;
         font-family: @regularSecondaryFontFamily;
@@ -1402,6 +1401,7 @@
 .richtextbox {
     color: @neutralPrimaryColor;
     pointer-events: all;
+    white-space: pre-wrap;
 
     a {
         color: @defaultLinkColor;
@@ -1683,7 +1683,7 @@ div.ql-toolbar {
     }
 }
 
-.clearCatcher, .backgroundRect{
+.clearCatcher, .backgroundRect {
     fill-opacity: 0;
 }
 
