merges source code from VSO/releases/prod into GitHub repo

--- a/src/Clients/Visuals/styles/visuals.less
+++ b/src/Clients/Visuals/styles/visuals.less
@@ -203,10 +203,8 @@
 
     .flexDisplay {
         display: -ms-flexbox;
-        display: -moz-box;
         display: flex;
         -ms-flex-direction: row;
-        -moz-box-orient: horizontal;
         flex-direction: row;
     }
 
@@ -671,8 +669,6 @@
         height: 24px;
         width: 24px;
         overflow: hidden;
-        -moz-border-radius: 13px;
-        -webkit-border-radius: 13px;
         border-radius: 13px;
         border: 1px solid @neutralSecondaryColor;
         margin: 10px;
@@ -798,7 +794,6 @@
             -webkit-user-select: none;
             -moz-user-select: none;
             -ms-user-select: none;
-            -o-user-select: none;
             user-select: none;
             cursor: default;
         }
@@ -974,7 +969,6 @@
             -webkit-user-select: none;
             -moz-user-select: none;
             -ms-user-select: none;
-            -o-user-select: none;
             user-select: none;
             cursor: default;
         }
@@ -1125,8 +1119,6 @@
     color: #333;
     background: rgba(255,255,255,1);
     /* css3 */
-    -webkit-border-radius: 0px;
-    -moz-border-radius: 0px;
     border-radius: 0px;
 }
 
@@ -1419,12 +1411,10 @@
 }
 
 div.ql-toolbar {
-    padding: 4px;
-    background: @neutralPrimaryColor;
-    color: @whiteColor;
     white-space: nowrap;
     overflow-x: hidden;
     font-size: 14px;
+
     // TODO: fix SELECT dropdown arrow in IE
     /*
     select::-ms-expand {
@@ -1432,20 +1422,11 @@ div.ql-toolbar {
     }
     */
     .ql-format-group {
-        display: inline-block;
         vertical-align: middle;
-        margin: 0px 2px;
     }
 
     select.ql-picker {
-        margin: 3px;
         padding: 3px;
-        background: @neutralPrimaryColorAlt;
-        border: 1px solid @blackColor;
-    }
-
-    select.ql-font {
-        width: 122px;
     }
 
     label {
@@ -1454,8 +1435,16 @@ div.ql-toolbar {
 
     .ql-format-button {
         margin: 3px;
+        padding: 4px;
+        font-size: @largeFontSize;
         display: inline-block;
         vertical-align: middle;
+
+        &:hover,
+        &.ql-active {
+            background: @themePrimaryColor;
+            color: @neutralPrimaryColor;
+        }
     }
 
     .toolbar-url-input {
@@ -1463,7 +1452,11 @@ div.ql-toolbar {
         vertical-align: middle;
 
         .ql-link div {
-            height: 100%;
+            height: 24px;
+            width: 24px;
+            position: absolute;
+            top: 0;
+            left: 0;
         }
 
         .ql-link-tooltip {
@@ -1514,98 +1507,76 @@ div.ql-toolbar {
         }
     }
 
-    .ql-format-button:hover {
-        background: @themePrimaryColor;
-        color: @neutralPrimaryColor;
+    &.stackedToolbar {
+        box-shadow: none;
+        position: inherit;
+        
+        .ql-link-tooltip {
+            a {
+                margin: 0;
+            }
+
+            .url {
+                max-width: 135px;
+                overflow: hidden;
+                display: inline-block;
+            }
+
+            &.editing .url {
+                display: none;
+            }
+
+            .input {
+                width: 175px;
+                margin: 0;
+            }
+        }
+
+        .ql-format-group {
+            margin-top: 8px;
+            display: block;
+            float: left;
+        }
+
+        label {
+            display: none;
+        }
+
+        select.ql-font {
+            width: 180px;
+        }
+
+        select.ql-size {
+            width: 60px;
+            margin-left: 10px;
+        }
     }
 
-    .ql-format-button.ql-active {
-        background: @themePrimaryColor;
-        color: @neutralPrimaryColor;
+    &.overlayedToolbar {
+        padding: 4px;
+
+        select.ql-picker {
+            margin: 3px;
+        }
+
+        .ql-format-group {
+            display: inline-block;
+            margin: 0px 2px;
+        }
+
+        select.ql-font {
+            width: 122px;
+        }
     }
 
-    .ql-format-button[data-value="left"] {
-        .sprite(@left-align-text-white);
-    }
+    &.darkToolbar {
+        background: @neutralPrimaryColor;
+        color: @whiteColor;
 
-    .ql-format-button[data-value="left"].ql-active {
-        .sprite(@left-align-text-black);
-    }
-
-    .ql-format-button[data-value="left"]:hover {
-        .sprite(@left-align-text-black);
-    }
-
-    .ql-format-button[data-value="right"] {
-        .sprite(@right-align-text-white);
-    }
-
-    .ql-format-button[data-value="right"].ql-active {
-        .sprite(@right-align-text-black);
-    }
-
-    .ql-format-button[data-value="right"]:hover {
-        .sprite(@right-align-text-black);
-    }
-
-    .ql-format-button[data-value="center"] {
-        .sprite(@center-align-text-white);
-    }
-
-    .ql-format-button[data-value="center"].ql-active {
-        .sprite(@center-align-text-black);
-    }
-
-    .ql-format-button[data-value="center"]:hover {
-        .sprite(@center-align-text-black);
-    }
-
-    .ql-format-button.ql-bold {
-        .sprite(@bold-text-white);
-    }
-
-    .ql-format-button.ql-bold.ql-active {
-        .sprite(@bold-text-black);
-    }
-
-    .ql-format-button.ql-bold:hover {
-        .sprite(@bold-text-black);
-    }
-
-    .ql-format-button.ql-italic {
-        .sprite(@italic-text-white);
-    }
-
-    .ql-format-button.ql-italic.ql-active {
-        .sprite(@italic-text-black);
-    }
-
-    .ql-format-button.ql-italic:hover {
-        .sprite(@italic-text-black);
-    }
-
-    .ql-format-button.ql-underline {
-        .sprite(@underline-text-white);
-    }
-
-    .ql-format-button.ql-underline.ql-active {
-        .sprite(@underline-text-black);
-    }
-
-    .ql-format-button.ql-underline:hover {
-        .sprite(@underline-text-black);
-    }
-
-    .ql-format-button.ql-link {
-        .sprite(@insert-link-white);
-    }
-
-    .ql-format-button.ql-link.ql-active {
-        .sprite(@insert-link-black);
-    }
-
-    .ql-format-button.ql-link:hover {
-        .sprite(@insert-link-black);
+        select.ql-picker {
+            background: @neutralPrimaryColorAlt;
+            border: 1px solid @blackColor;
+        }
     }
 }
 
@@ -1830,6 +1801,11 @@ div.ql-toolbar {
 .visual-sandbox {
     border: none;
     overflow: hidden;
+
+    //adding this because cors block fonts for sandboxed visuals.
+    .tooltip-container .tooltip-row{
+        font-size: 9px;
+    }
 }
 
 .x-ref-line {
