adds a new Gantt Chart

--- a/src/Clients/Visuals/styles/visuals.less
+++ b/src/Clients/Visuals/styles/visuals.less
@@ -2135,3 +2135,34 @@ div.ql-toolbar {
         }
     }
 }
+
+.gantt {
+    .axis {
+        path {
+            fill: none;
+        }
+
+        path, line {
+            stroke: #000;
+            stroke-width: 0.5;
+        }
+    } 
+
+    .tasks {
+        .task {
+            .task-rect {
+                fill: transparent;
+                stroke: #000;
+                stroke-width: 1px;
+            }
+        }
+    }
+
+    .chart {
+        .chart-line {
+            stroke-width: 2px;
+            stroke-dasharray: 3, 3;
+            stroke: #000;
+        }
+    }
+}
