npm package: version 0.2.11

--- a/lib/visuals.css
+++ b/lib/visuals.css
@@ -1518,25 +1518,25 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 .secondaryFont {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
 }
 .secondaryBoldFont {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
 }
 .lightFont {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
 }
 .semilightFont {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
 }
 .regularFont {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
 }
 .semiboldFont {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
 }
 .boldFontFamily {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
 }
 .smallFontSize {
   font-size: 12px;
@@ -1943,7 +1943,7 @@ body {
 .animatedNumber .mainText,
 .card .mainText {
   fill: #333333;
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
 }
 /* Column chart styles */
 .columnChart .column {
@@ -1953,7 +1953,7 @@ body {
   fill: #239fd1;
 }
 .columnChart .axisGraphicsContext {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   font-size: 11px;
 }
 .columnChart .axisGraphicsContext text {
@@ -1975,7 +1975,7 @@ body {
   opacity: 1;
 }
 .dataDotChart .dataDotChartMainGraphicsContext {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   font-size: 11px;
 }
 .dataDotChart .dataDotChartMainGraphicsContext .dot {
@@ -1998,7 +1998,7 @@ body {
   display: none;
 }
 .dataDotChart .axisGraphicsContext {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   font-size: 11px;
 }
 .dataDotChart .axisGraphicsContext text {
@@ -2017,7 +2017,7 @@ body {
   fill: #239fd1;
 }
 .waterfallChart .axisGraphicsContext {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   font-size: 11px;
 }
 .waterfallChart .axisGraphicsContext text {
@@ -2068,7 +2068,7 @@ body {
   opacity: 1;
 }
 .lineChart .axisGraphicsContext {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   font-size: 11px;
 }
 .lineChart .axisGraphicsContext text {
@@ -2095,10 +2095,10 @@ body {
 }
 .funnelChart .percentBars text {
   text-anchor: middle;
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
 }
 .funnelChart .axis {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   font-size: 11px;
 }
 .funnelChart .axis path {
@@ -2119,7 +2119,7 @@ body {
   stroke: white;
 }
 .donutChart .labels text {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   font-size: 11px;
   fill: #777777;
 }
@@ -2132,15 +2132,15 @@ body {
   fill: #666666;
 }
 .donutLegend .legend-item .category {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   color: #666666;
 }
 .donutLegend .legend-item .percentage {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   /* No need for color, as it would be overriden afterwards */
 }
 .donutLegend .legend-item .value {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   color: #666666;
 }
 .scatterChart .mainGraphicsContext path {
@@ -2164,7 +2164,7 @@ body {
   opacity: 0.6;
 }
 .scatterChart .axisGraphicsContext {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   font-size: 11px;
 }
 .scatterChart .axisGraphicsContext text {
@@ -2188,7 +2188,7 @@ body {
   opacity: 1;
 }
 .playChart .axisGraphicsContext {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   font-size: 11px;
 }
 .playChart .axisGraphicsContext text {
@@ -2327,7 +2327,7 @@ body {
   padding: 0px;
   border: 0px;
   margin: 0px;
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   color: #666666;
   font-weight: normal;
 }
@@ -2374,12 +2374,12 @@ body {
   border-bottom-width: 1pt;
   border-bottom-style: solid;
   border-bottom-color: #E8E8E8;
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   color: #333333;
   padding: 0px 0px 0px 10px;
 }
 .tablixContainer .bi-tablix .bi-table-last-row {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   color: #333333;
   padding: 0px 0px 0px 10px;
 }
@@ -2387,7 +2387,7 @@ body {
   border-top-width: 1pt;
   border-top-style: solid;
   border-top-color: #CCCCCC;
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   color: #333333;
   padding: 0px 5px 0px 10px;
 }
@@ -2424,12 +2424,12 @@ body {
 }
 .tablixContainer .bi-tablix .bi-matrix-body-cell {
   text-align: right;
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   color: #333333;
   padding: 0px 5px 0px 10px;
 }
 .tablixContainer .bi-tablix .total {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
 }
 .tablixContainer .bi-tablix .scroll-bar-div {
   background: #F1F1F1;
@@ -2471,7 +2471,7 @@ body {
   padding: 0px;
   border: 0px;
   margin: 0px;
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   color: #666666;
   font-weight: normal;
 }
@@ -2508,12 +2508,12 @@ body {
   border-bottom-width: 1pt;
   border-bottom-style: solid;
   border-bottom-color: #E8E8E8;
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   color: #333333;
   padding: 0px 0px 0px 10px;
 }
 .tablixContainer .bi-dashboard-tablix .bi-table-last-row {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   color: #333333;
   padding: 0px 0px 0px 10px;
 }
@@ -2521,7 +2521,7 @@ body {
   border-top-width: 1pt;
   border-top-style: solid;
   border-top-color: #CCCCCC;
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   font-weight: bold;
   color: #333333;
   padding: 0px 5px 0px 10px;
@@ -2556,13 +2556,13 @@ body {
 }
 .tablixContainer .bi-dashboard-tablix .bi-matrix-body-cell {
   text-align: right;
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   color: #333333;
   padding: 0px 5px 0px 10px;
 }
 .tablixContainer .bi-dashboard-tablix .total {
   font-weight: bold;
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
 }
 .callout {
   /*temp styles, waiting on behaviour spec*/
@@ -2648,7 +2648,7 @@ body {
   fill: none;
 }
 .visual .treemap .labels {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   fill: #FFF;
   pointer-events: none;
 }
@@ -2704,12 +2704,12 @@ body {
   cursor: pointer;
 }
 .interactive-legend .title {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   font-size: 16px;
   color: #666666;
 }
 .interactive-legend .item {
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   font-size: 12px;
   color: #666666;
   padding-right: 22px;
@@ -2754,7 +2754,7 @@ body {
 .tooltip-container div.tooltip-title-cell {
   display: table-cell;
   word-wrap: break-word;
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   text-transform: uppercase;
   max-width: 130px;
   padding-right: 12px;
@@ -2763,7 +2763,7 @@ body {
 .tooltip-container div.tooltip-value-cell {
   display: table-cell;
   word-wrap: break-word;
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   max-width: 260px;
   font-weight: bold;
   color: #FFF;
@@ -2795,12 +2795,12 @@ body {
 .labelGraphicsContext .label {
   font-size: 12px;
   text-anchor: middle;
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
 }
 .labelGraphicsContext .catagorylabel {
   font-size: 12px;
   text-anchor: middle;
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
 }
 .leader-lines .line-label {
   opacity: 0.5;
@@ -2809,7 +2809,7 @@ body {
 .data-labels {
   font-size: 12px;
   text-anchor: middle;
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   /* Enables tooltip when hovering on data label inside visual */
   pointer-events: none;
 }
@@ -3011,7 +3011,7 @@ div.ql-toolbar.darkToolbar select.ql-picker {
 }
 .multiRowCard .card .title {
   font-size: 18px;
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   line-height: 24px;
   margin-bottom: 5px;
   overflow: hidden;
@@ -3128,7 +3128,7 @@ div.ql-toolbar.darkToolbar select.ql-picker {
 }
 .kpiVisual .goalText {
   fill: #333333;
-  font-family: Tahoma,Verdana,Geneva,sans-serif;
+  font-family: Segoe UI,Tahoma,Verdana,Geneva,sans-serif;
   font-size: 15px;
   text-anchor: middle;
 }
