Fixing legend in enhanced scatter chart

--- a/src/Clients/CustomVisuals/visuals/enhancedScatterChart/styles/enhancedScatterChart.less
+++ b/src/Clients/CustomVisuals/visuals/enhancedScatterChart/styles/enhancedScatterChart.less
@@ -30,8 +30,10 @@
     @enhancedScatterChartColor: #777777;
 
     path {
-        fill: none;
-        stroke-width: 3px;
+        &.dot {
+            fill: none;
+            stroke-width: 3px;
+        }
     }
 
     .notSelected {
