--- a/src/Clients/StyleLibrary/less/powervisuals-glyphs.less
+++ b/src/Clients/StyleLibrary/less/powervisuals-glyphs.less
@@ -73,6 +73,13 @@
     fill: @kpiVisualGraphGrey;
 }
 
+@font-face {
+    font-family: 'PowerVisuals';
+    src: ~"local('helvetica'),local('arial'),local('sans-serif')";
+    font-weight: normal;
+    font-style: normal;
+}
+
 .powervisuals-glyph {
     font-family: PowerVisuals;
     font-size: 12px;
